Optimize ProblematicProgramsUpdater::HasCachedPrograms()

This function now returns after the first valid program found in the
cache instead of building a vector containing all the programs.

Bug: 822867
Change-Id: I9757ac6f81ac4ad4d588461b95af15865e25d863
Reviewed-on: https://chromium-review.googlesource.com/967149
Commit-Queue: Patrick Monette <pmonette@chromium.org>
Reviewed-by: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545810}
Former-commit-id: b6dc176656aeec508d4cbcbf6b358b931910fa26